--- a/index.html
+++ b/index.html
@@ -37,9 +37,35 @@
         <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
       </address>
     </header>
-    <cover class="cover"></cover>
-    <lots class="lots"></lots>
-    <about class="about"></about>
+    <section class="cover">
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="aligned-text">
+          о<span class="letter-spacing-extended">но</span>
+        </span>
+        <span class="aligned-text aligned-text_center">
+          те<span class="letter-spacing-extended">бе</span>
+        </span>
+        <span class="aligned-text aligned-text_right">
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+        </span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <button class="bet-button">Сделать ставку</button>
+      </div>
+    </section>
+    <section class="lots">
+      <h2 class="lots__heading">
+        Лоты
+      </h2>
+      <li class="lots__card-list">
+        <ul class="lots__card-list-item">
+          
+        </ul>
+      </li>
+    </section>
+    <section class="about"></section>
     <footer class="footer"></footer>
   </body>
 </html>
